deploy/google-cloud/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bunshin
  labels:
    app: bunshin
