deploy/google-cloud/base/svc-broker.yaml
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: bunshin
  labels:
    app: broker
spec:
  type: ClusterIP
  selector:
    app: broker
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
