deploy/google-cloud/base/svc-runner.yaml
apiVersion: v1
kind: Service
metadata:
  name: runner
  namespace: bunshin
  labels:
    app: runner
spec:
  type: ClusterIP
  selector:
    app: runner
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: app
      port: 5000
      targetPort: 5000
      protocol: TCP
