deploy/google-cloud/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bunshin-internal-nginx
  namespace: bunshin
spec:
  parentRefs:
    - name: bunshin-internal
  rules:
    - backendRefs:
        - name: nginx
          namespace: bunshin
          port: 8080
